# BVCProto

./: .gitignore  BVC.py  BVCQuantizer.py  BVC_CLI.py  BVC_Inspector.py  README.md  compile_report.bat  larry.bvc  output.bvc  output.rbvc  package-lock.json  publish_benchmark.py  test_baseline.bvc  test_optimized.bvc  test_output.rbvc  test_suite_master.py  test_sweep.py
__pycache__/: BVC.BVC_GLPC._autocorr_fast-157.py313.1.nbc  BVC.BVC_GLPC._autocorr_fast-157.py313.nbi  BVC.BVC_GLPC._autocorr_fast-158.py313.1.nbc  BVC.BVC_GLPC._autocorr_fast-158.py313.nbi  BVC.BVC_GLPC._autocorr_fast-162.py313.1.nbc  BVC.BVC_GLPC._autocorr_fast-162.py313.nbi  BVC.BVC_GLPC._autocorr_fast-163.py313.1.nbc  BVC.BVC_GLPC._autocorr_fast-163.py313.nbi  BVC.BVC_GLPC._autocorr_fast-165.py313.1.nbc  BVC.BVC_GLPC._autocorr_fast-165.py313.nbi  BVC.BVC_GLPC._autocorr_fast-167.py313.1.nbc  BVC.BVC_GLPC._autocorr_fast-167.py313.nbi  BVC.BVC_GLPC._autocorr_fast-169.py313.1.nbc  BVC.BVC_GLPC._autocorr_fast-169.py313.nbi  BVC.BVC_GLPC._autocorr_fast-173.py313.1.nbc  BVC.BVC_GLPC._autocorr_fast-173.py313.nbi  BVC.BVC_GLPC._autocorr_fast-174.py313.1.nbc  BVC.BVC_GLPC._autocorr_fast-174.py313.nbi  BVC.BVC_GLPC._autocorr_fast-175.py313.1.nbc  (+118 more)
cpp/: CMakeLists.txt  README.md
cpp/cli/: main.cpp
cpp/core/: BVCDecoder.cpp  BVCDecoder.h  BVCEncoder.cpp  BVCEncoder.h  BitStream.h  Common.h  Dictionary.cpp  Dictionary.h  Entropy.cpp  Entropy.h  LPC.cpp  LPC.h  MatchingPursuit.cpp  MatchingPursuit.h  MathUtils.h  Pipeline.h  Quantizer.cpp  Quantizer.h
cpp/tests/: TestUtils.h  test_main.cpp
python/: README.md  (+2 more)
(+9 files in other folders)
